finish fix bug